Some refactor